src/objects/QPMS__BatchApexErrorLog__c.object
<CustomObject>
    <description>This object is used to capture batch error master record.</description>
    <fields>
        <fullName>QPMS__Course_Session_Name__c</fullName>
        <description>For showing name in email alert from batch apex</description>
        <label>Course Session Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__JobApexClass__c</fullName>
        <label>Job Apex Class</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__JobCreatedDate__c</fullName>
        <label>Job Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__JobErrors__c</fullName>
        <label>BatchErrors</label>
        <summaryForeignKey>QPMS__BatchApexError__c.QPMS__BatchApexErrorLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QPMS__JobId__c</fullName>
        <externalId>true</externalId>
        <label>Job Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__JobItemsProcessed__c</fullName>
        <label>JobItemsProcessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Job_Function_Name__c</fullName>
        <description>Showing jobfunction name in email</description>
        <label>Job Function Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__NumberOfErrors__c</fullName>
        <label>NumberOfErrors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>QPMS__BatchApexErrorLog__c</referenceTo>
        <relationshipLabel>Batch Apex Error Logs</relationshipLabel>
        <relationshipName>Batch_Apex_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__RecordId__c</fullName>
        <label>RecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__TotalFailedRecords__c</fullName>
        <label>TotalFailedRecords</label>
        <summarizedField>QPMS__BatchApexError__c.QPMS__FailedRecords__c</summarizedField>
        <summaryForeignKey>QPMS__BatchApexError__c.QPMS__BatchApexErrorLog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QPMS__TotalJobItems__c</fullName>
        <label>TotalJobItems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__TotalProcessedRecords__c</fullName>
        <label>TotalProcessedRecords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Batch Apex Error Log</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>QPMS__TotalFailedRecords__c</columns>
        <columns>QPMS__JobApexClass__c</columns>
        <columns>QPMS__TotalProcessedRecords__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>QPMS__JobErrors__c</columns>
        <columns>QPMS__TotalJobItems__c</columns>
        <columns>QPMS__NumberOfErrors__c</columns>
        <columns>QPMS__JobId__c</columns>
        <columns>QPMS__Module__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>QPMS__Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>JOB-{00000000}</displayFormat>
        <label>Batch Apex Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Apex Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>